--- a/frontend/src/pages/testcases/style/components.module.less
+++ b/frontend/src/pages/testcases/style/components.module.less
@@ -76,7 +76,6 @@
 
 .table-card {
   width: 100%;
-  overflow: auto;
 }
 
 .table-spin {
